# ProgrammingChallenges

./: .gitignore  README.md  Ruisi Fang  Songyuan Fan _ SQL-Take-Home-Challenge .sql  Sql.Answers  Sum of Impressions by day  Top 3 Revenue by state
.devcontainer/: devcontainer.json
arch-challenge/: README.md
csv-combiner/: Pipfile  README.md  combineScript.js  combine_csv.py  combine_csv_test.py  combined.csv  csv_combiner_test.py  csvcombiner.py  generatefixtures.py  generator_test.py  package-lock.json  package.json  pyproject.toml
csv-combiner/.github/: build.yaml
csv-combiner/fixtures/: accessories.csv  clothing.csv  household_cleaners.csv
csv-combiner/src/csv_combiner_solution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
csv-combiner/src/csv_combiner_yvonne_wu/: main.py  processfiles.py
csv-combiner/src/csv_combiner_yvonne_wu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
csv-combiner/src/csvcombinersolution/: __main__.py  processfiles.py
csv-combiner/test/: combineScript.test.js
csv-combiner/tests/: test_csv_combiner.py  test_processfiles.py
ec2-instance/: .gitignore  README.md  data_sources.tf  instance.tf  variables.tf  vpc.tf
frontend-test-react/: Challenge.md  README.md  package-lock.json  package.json
log-parser/: README.md
sql-assesment/: README.md  SQL_Assessment.md  marketing_data.csv  store_revenue.csv
sql-assessment/: Bonus Question  Question 4  README.md  SQL Question 3  Tiffany Chen Responses  answer.sql.david  answers  answers.sql  campaign_info.csv  marketing_performance.csv  (+2 more)
(+44 files in other folders)
